<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Goods Order Manager</string>
    <string name="action_settings">Settings</string>
    <string name="back">back</string>
    <string name="order_date1">The date of order:</string>
    <string name="date">Date</string>
    <string name="purchaser1">Purchaser:</string>
    <string name="salesman1">Salesman:</string>
    <string name="retainage1">Retainage:</string>
    <string name="deposit1">Depsite:</string>
    <string name="total_price1">Total price:</string>
    <string name="order_details">Order Details</string>
    <string name="all_order">All Order</string>
    <string name="purchaser">Purchaser</string>
    <string name="salesman">Salesman</string>
    <string name="add_order">Add Order</string>
    <string name="add">Add</string>
    <string name="view_all_order">View All Order</string>
    <string name="hint_purchaser">Please input purchaser</string>
    <string name="hint_total_price">Please input total price</string>
    <string name="hint_deposit">Please input deposit</string>
    <string name="hint_retainage">Please input retainage</string>
    <string name="hint_salesman">Please input salesman</string>
    <string name="modify">modify</string>
    <string name="version_unknown">NO VERSION</string>

</resources>
