<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg1">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_order"
        android:textSize="@dimen/title_textsize"
        android:gravity="center_horizontal"/>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout 
            android:layout_width="match_parent"
            android:orientation="vertical"
        	android:layout_height="match_parent">
        		
    		<LinearLayout 
     			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
   	    		android:orientation="horizontal">
        
        		<TextView 
            		android:text="@string/purchaser1"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:textSize="@dimen/all_textsize"/>
    			<EditText 
      	  			android:id="@+id/add_purchaser"
      	  			android:layout_width="match_parent"
      	  			android:layout_height="wrap_content"
      	  			android:hint="@string/hint_purchaser"
      	  			android:textSize="@dimen/all_textsize"
       	 			/>
    	</LinearLayout>
        	<LinearLayout 
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal">
        
        	<TextView 
            	android:text="@string/total_price1"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/all_textsize"/>
    		<EditText 
      	  		android:id="@+id/add_price"
      	  		android:layout_width="match_parent"
      	  		android:layout_height="wrap_content"
      	  		android:hint="@string/hint_total_price"
      	  		android:textSize="@dimen/all_textsize"
       	 		/>
    	</LinearLayout>
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	>
        	<TextView 
            	android:text="@string/deposit1"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/all_textsize"/>
        	<EditText 
            	android:id="@+id/add_deposit"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:hint="@string/hint_deposit"
            	android:textSize="@dimen/all_textsize"/>
    	</LinearLayout>
    
    	<LinearLayout 
       		 android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	>
        	<TextView 
            	android:text="@string/retainage1"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/all_textsize"/>
        	<EditText 
            	android:id="@+id/add_retainage"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:hint="@string/hint_retainage"
            	android:textSize="@dimen/all_textsize"/>
    	</LinearLayout>
    
    	<LinearLayout 
       			android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		>
        	<TextView 
           	 	android:text="@string/salesman1"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/all_textsize"/>
        	<EditText 
            	android:id="@+id/add_salesman"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:hint="@string/hint_salesman"
            	android:textSize="@dimen/all_textsize"/>
    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	>
        	<TextView 
        		android:text="@string/order_date1"
        		android:layout_width="wrap_content"
        		android:layout_height="match_parent"
        		android:gravity="center_vertical"
        		android:textSize="@dimen/all_textsize"
        		/>
        	<DatePicker 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:id="@+id/datepicker"
        		android:layout_gravity="center_horizontal"
        		android:calendarViewShown="false"/>
        </LinearLayout>
    
		<Button 
	    	android:id="@+id/send_data"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/all_textsize"
	    	android:text="@string/add"
	    	/>
		<Button 
	   		android:id="@+id/show_data"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/all_textsize"
	    	android:text="@string/view_all_order"/>
	</LinearLayout>
</ScrollView>
</LinearLayout>
