<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg1"
    >
    <TextView 
        android:text="@string/order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_textsize"
        android:gravity="center_horizontal"/>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout 
            android:layout_width="match_parent"
            android:orientation="vertical"
        	android:layout_height="match_parent">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:text="@string/purchaser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
        <TextView 
            android:id="@+id/purchaser_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
    </LinearLayout>
    

    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:text="@string/total_price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
        <TextView 
            android:id="@+id/price_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:text="@string/deposit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
        <TextView 
            android:id="@+id/deposit_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:text="@string/retainage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
        <TextView 
            android:id="@+id/retainage_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:text="@string/salesman1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
        <TextView 
            android:id="@+id/salesman_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:text="@string/order_date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
        <TextView 
            android:id="@+id/date_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>
    </LinearLayout>

    <Button 
        android:text="@string/modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/all_textsize"
        android:id="@+id/modify"/>
    <Button 
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:textSize="@dimen/all_textsize"
        android:layout_height="wrap_content"
        />
	</LinearLayout>
</ScrollView>
</LinearLayout>
