<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:background="@drawable/bg1">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<TextView 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/all_order"
	    	android:textSize="@dimen/title_textsize"
	    	android:gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:gravity="center_horizontal"
            android:text="@string/purchaser"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/all_textsize"/>

        <TextView
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/salesman"
            android:textSize="@dimen/all_textsize" />

    </LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <ListView 
	        android:id="@id/android:list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        ></ListView>
	</LinearLayout>

</LinearLayout>
